Creada pagina web
Se tiene la pagina web disponible con los widgets para ingresar los parametros de busqueda.

Esta pagina es cargada dentro del servidor.
Dicha pagina, carga el canvas donde se mostrará el grafico que el usuario desee ver.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>movilieze</title>
+	<title>Movielize</title>
 
 	<script src="libraries/p5.js"></script>
 	<script src="libraries/p5.dom.js"></script>
@@ -24,5 +24,21 @@
 	</style>
 </head>
 <body>
+	<h2> Movielize - Consultas </h2>
+	<br>
+	
+	<form action="/action_page.php">
+		Nombre: <input type="text" name="Name">
+		Genero: <input type="text" name="Gender">
+		Actores: <input type="text" name="Actors"><br>
+	  
+		Rango de años - Inicio: <input type="text" name="YearBegin">
+		Fin: <input type="text" name="YearEnd"><br><br>
+	  
+	  <input type="submit" value="Submit">
+	</form>
+	
+	<br><br>
+
 </body>
 </html>
