--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 	<script src="libraries/p5.js"></script>
 	<script src="libraries/p5.dom.js"></script>
 	<script src="libraries/p5.sound.js"></script>
-	<script src="sketch.js"></script>
+	<script type="text/javascript" src="sketch.js"></script>
 
 	<style>
 		body {
 			margin:0;
 			padding:0;
 			overflow: hidden;
+			font: "Roboto";
 		}
 		canvas {
 			margin:auto;
@@ -26,19 +27,8 @@
 <body>
 	<h2> Movielize - Consultas </h2>
 	<br>
-	
-	<form action="/action_page.php">
-		Nombre: <input type="text" name="Name">
-		Genero: <input type="text" name="Gender">
-		Actores: <input type="text" name="Actors"><br>
-	  
-		Rango de años - Inicio: <input type="text" name="YearBegin">
-		Fin: <input type="text" name="YearEnd"><br><br>
-	  
-	  <input type="submit" value="Submit">
-	</form>
-	
-	<br><br>
-
+	<br>
+	<br>
+	<br>
 </body>
 </html>
